--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:19.0.0'
     //gson
     implementation'com.google.code.gson:gson:2.8.7'
+    implementation 'junit:junit:4.13.1'
     // Spring Boot Starter
     testImplementation ('org.springframework.boot:spring-boot-starter-test')
 
