--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,17 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-data-jpa') //mysql 5버전의 경우 삭제.
 
+    // Firebase
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
 
+    // json
+    implementation 'org.json:json:20200518'
 
     // Web
     implementation ('org.springframework.boot:spring-boot-starter-web')
+
+    // okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     // Security, Authentication
     implementation('org.springframework.boot:spring-boot-starter-security')
