--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,13 @@ dependencies {
     compile(group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0')
     compile('io.jsonwebtoken:jjwt:0.9.0')
 
+    // webSocket
+    implementation ('org.springframework.boot:spring-boot-starter-websocket')
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // STOMP
+    implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
+
     implementation('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
