--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     // webSocket
     implementation ('org.springframework.boot:spring-boot-starter-websocket')
+    implementation 'org.webjars:sockjs-client:1.1.2'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     // STOMP
