--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Project exclude paths
 /.gradle/
-#/src/main/java/com/example/demo/config/secret/
+/src/main/java/com/example/demo/config/secret/
 
 service-account.json
 application.yml
